# vpipe

./: .dockerignore  .env.backup.20260122_104654  .env.eventhub  .env.example  .env.simulation.example  .gitignore  ADX_IMPLEMENTATION_COMPLETE.md  ADX_LOGGING_RECOMMENDATIONS.md  AI_SMELL_REMEDIATION_PLAN.md  BATCH_CONSUMER_DESIGN.md  CLAUDE.md  Dockerfile  Dockerfile.monitoring  EVENTHUB_QUICKSTART.md  HIGH_IMPACT_CHANGES.md  ISSUE_37_FIX_SUMMARY.md  Jenkinsfile  KAFKA_EVENTHUB_MIGRATION_AUDIT.md  KAFKA_TEST_CLEANUP.md  LICENSE  MIGRATION_EVENTHUB.md  Makefile  OBSERVABILITY.md  PHASE_3_KAFKA_REMOVAL.md  PR_DESCRIPTION.md  PR_SUMMARY_ISSUE_47.md  Procfile  QUICKSTART.md  SIMULATION_DOCKER.md  SIMULATION_REMOVAL_PLAN.md  TEST_GUIDE.md  THIRD_PARTY_LICENSES.md  TRANSPORT_LAYER_MIGRATION.md  cleanup_kafka_tests.sh  docker-compose.jaeger.yml  docker-compose.simulation.yml  docker-compose.yml  docker-compose.yml.backup  docker_tldr.md  fix_lint.py  (+7 more)
.checkpoints/: poller_xact.json
.github/: copilot-instructions.md
config/: README_SIMULATION_CONFIG.md  simulation.yaml
docs/: .env.production  ASYNC_BEST_PRACTICES.md  BREAKING_CHANGES_CONFIG.md  CLAIMX_PIPELINE.md  COMPLETE_WORKER_LIST.md  CREATE_CLAIMX_TASK_SUMMARY.md  CROSS_DOMAIN_IDENTIFIER_HANDLING.md  EVENTHUB_LOGGING_IMPLEMENTATION.md  LOGGING.md  LOG_UPLOAD_IMPLEMENTATION.md  PLUGIN_TESTING.md  QUICKSTART.md  REFACTOR_SUMMARY.md  TESTING_NEXT_STEPS.md  TEST_COVERAGE_REMEDIATION_PLAN.md  TLDR.md  VERISK_PIPELINE.md  claimx_auxiliary_systems_review.md  claimx_workers_review.md  docker_tldr.md  hybrid_dedup_implementation.md  migrate_logging.py  test_diagrams.html
examples/: local_storage_example.py
observability/: otel-collector-config.yaml
observability/adx/: ingestion_mapping.json  table_schema.kql
observability/grafana/: README.md
observability/prometheus/: prometheus.yml
scripts/: DELTA_SIMULATION_GUIDE.md  README.md  build_vendor_gssapi.sh  check_awaits.py  cleanup_simulation_data.sh  docker-compose.jaeger.yml  docker-compose.kafka.yml  docker-compose.obs.yml  eventhub_checkpoints.py  eventhub_drain.py  eventhub_reset_to_time.md  eventhub_reset_to_time.py  generate_test_data.sh  get-proxy.ps1  inject_claimx_event.py  inspect_simulation_delta.py  kafka_consumer_test.py  monitor_simulation.sh  run_simulation.sh  start_simulation.sh  stop_simulation.sh  test_delta_simulation.py  test_itel_vendor_schema.py  verify_itel_submissions.py  verify_simulation.py
scripts/deployment/: .env.template  QUICK_REFERENCE.md  README.md  docker-compose.kafka.yml  install.sh  manage-workers.sh  setup-kafka.sh
scripts/docker/: Dockerfile  docker-compose.kafka.yml  docker-compose.obs.yml  docker-compose.simulation.yml  docker-compose.yml
scripts/json_parsing/: parse.py  src.json  src_attachments.json  src_forms.json  src_readable.json
src/: .env.example  AI_SMELL_REVIEW.md  requirements.txt  wave9_completion_summary.md
src/config/: __init__.py  claimx_config.yaml  config.py  config.yaml  config.yaml.example  config_validator.py  pipeline_config.py  shared.yaml  xact_config.yaml
src/core/: __init__.py  types.py
src/docs/: PLUGIN_LOGGING_GUIDE.md  project_cache_implementation.md
src/kafka_pipeline/: __init__.py  __main__.py  config.py  pipeline_config.py
src/pipeline/: __init__.py  __main__.py  __main__.py.backup  config.py  pipeline_config.py
src/scripts/: check_plugin_config.py  debug_itel_flow.py  inspect_entity_rows.py  run_dual_domain_producer.py  run_itel_dummy_producer.py  test_eventhub_connection.py  test_itel_dummy_data.py  test_plugin_execution.py  test_project_cache.py  trigger_itel_plugin_from_events.py  verify_itel_plugin.py  verify_itel_structure.py
tests/: conftest.py  test_adx_logging.py  test_config_validator.py  test_url_validation_simulation.py  verify_observability.py  verify_xact.py
tests/config/: test_config.py  test_pipeline_config.py
tests/core/: test_types.py
tests/kafka_pipeline/: conftest.py  test_config.py.disabled  test_config_loading.py  test_pipeline_config.py
(+837 files in other folders)
